# chromatopy

./: .gitignore  404.html  README.md  action.yaml  index.html  mkdocs.yml  model.py  new_generation_test.yaml  objects.inv  pyproject.toml  sitemap.xml  test_hplcanalyzer.ipynb  test_parser.ipynb
.github/workflows/: generate_api.yaml  make_docs.yaml  release.yaml  run_tests.yaml  test_new_action.yaml
HPLC/core/: __init__.py  column.py  detector.py  fiddetector.py  hplcexperiment.py  inlet.py  measurement.py  method.py  molecule.py  oven.py  peak.py  ramp.py  signal.py  signaltype.py  standard.py  tcddetector.py  valve.py
HPLC/schemes/: hplc_schema.md
HPLC/tools/: analyze.py  hplcanalyzer.py  hplcexperiment.py  parser.py  visualize.py
api_reference/analyzer/: index.html
api_reference/handler/: index.html
api_reference/molecule/: index.html
api_reference/protein/: index.html
chromatopy/: __init__.py  model.py
chromatopy/core/: __init__.py  analyte.py  chromatigraphicexperiment.py  chromatogram.py  chromhandler.py  column.py  detector.py  fiddetector.py  inlet.py  measurement.py  method.py  molecule.py  oven.py  peak.py  ramp.py  role.py  signal.py  signaltype.py  standard.py  tcddetector.py  valve.py
chromatopy/ioutils/: enzymeml.py
chromatopy/readers/: __init__.py  abstractreader.py  agilent_csv.py  agilent_rdl.py  agilent_txt.py  asm.py  chemstation.py  chromeleon.py  chromreader.py  csv.py  csvreader.py  factory.py  generic_csv.py  shimadzu.py  test_abstractreader.py  thermo_txt.py
chromatopy/schemes/: chromatopy_schema.md
chromatopy/tools/: __init__.py  analyzer.py  calibration.py  fit_chromatogram.py  internal_standard.py  molecule.py  peak_utils.py  protein.py  species.py  utility.py
chromatopy/units/: ontomaps.toml  predefined.py  units.py
chromhandler/: __init__.py  analyzer.py  enzymeml.py  pretty.py  utility.py
chromhandler/ioutils/: enzymeml.py
chromhandler/readers/: abstractreader.py  agilent_rdl.py  agilent_txt.py  asm.py  chromeleon.py  generic_csv.py  thermo_txt.py
chromhandler/tools/: analyzer.py  internal_standard.py  molecule.py  utility.py
data/: ACQ.TXT
docs/: index.md  installation.md  supported_formats.md
docs/api_reference/: analyzer.md  handler.md  molecule.md  protein.md
docs/examples/: define_molecules.md  define_proteins.md  peak_assignment.ipynb  peak_assignment.md  read_data.ipynb  read_data.md  test.ipynb  usage.ipynb  visualize.md
docs/examples/chemstation-example/: test_hplcanalyzer.ipynb
docs/examples/csv-example/: chromatogram.ipynb
docs/examples/plots/: cascade_peaks.json  visualize_all.json
docs/examples/shimadzu-example/: 2023-12-08 01-20-41+01-00-01.dx_DAD1A.CSV
docs/getting_started/: calibrator.md  read_in.md
docs/schemes/: cascade_reaction_scheme.txt
docs/usage/: usage.ipynb
examples/: chromatogram.ipynb  concentrations.csv  test.csv  test.ipynb  test_hplcanalyzer.ipynb
examples/chemstation-example/: concentrations.csv  read_chemstation.ipynb  test_hplcanalyzer.ipynb
examples/data/: Report.TXT
examples/data/asm/: N6BENZYLADOONB_RNCOMT_0hours.json
examples/data/asm_2/: RAU-R503-02.json  RAU-R503-06.json  RAU-R503-07.json
examples/data/asm_3/: EXP-24-AK6137_b_005_014.json  EXP-24-AK6137_b_007_016.json
examples/data/calibration/: Adenosine.json  SAH.json
examples/data/chromeleon/: Adenosine Stadards_ 0.5 mM.txt  Adenosine Stadards_ 1 mM.txt
examples/data/chromeleon_kinetic/: 0 h 25.3.txt  24 h 25.2.txt  24 h 25.3.txt
examples/data/instances/: analyzer_is.json  (+1 more)
examples/define_molecules/: index.html
examples/define_proteins/: index.html
examples/kr/: kr_parser.ipynb  lc.ipynb
examples/peak_assignment/: index.html
examples/plots/: visualize_spectra.json
examples/read_data/: index.html
examples/shimadzu-example/: calibration.ipynb  read_shimadzu.ipynb
examples/test/: index.html
examples/usage/: index.html
examples/visualize/: index.html
getting_started/calibrator/: index.html
getting_started/read_in/: index.html
installation/: index.html
search/: search_index.json
specifications/: HPLC.md  chromatography.md
supported_formats/: index.html
tests/: test_enzymeml.py  test_peak_assignment.py
tests/test_readers/: dummyreader.py  test_AbstractReader.py  test_agilent.py  test_asm.py  test_chromeleon.py  test_jn.py  test_shimadzu.py  test_thermo.py  test_wired_windows.py
usage/usage/: index.html
(+862 files in other folders)
