[tool.poetry]
name = "chromatopy"
version = "0.9.7"
description = "Tool for processing chromatography data"
authors = ["haeussma <83341109+haeussma@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "chromatopy"}]


[tool.poetry.dependencies]
python = "^3.10"
calipytion = { git = "https://github.com/FAIRChemistry/CaliPytion.git", branch = "dev" }
pyenzyme = { git = "https://github.com/EnzymeML/PyEnzyme.git", branch = "v2-migration" }
plotly = "^5.19.0"
rainbow-api = "^1.0.6"
joblib = "^1.4.2"
rich = "^13.7.1"
loguru = "^0.7.2"
pybaselines = "^1.1.0"
hplc-py = "^0.2.7"

[tool.poetry.group.dev.dependencies]
pydantic = {extras = ["mypy"], version = "^2.3.0"}
mkdocs-material = "^9.5.12"
ruff = "^0.4.1"
pytest = "^8.0.2"
devtools = "^0.12.2"
mkdocs-plotly-plugin = "^0.1.3"
mkdocstrings = {extras = ["python"], version = "^0.26.1"}
nbval = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pydantic.mypy]
init_typed = true

[tool.pytest.ini_options]
markers = [
    "readers: marks tests as slow (deselect with '-m \"not slow\"')",
    "core: marks tests as core (deselect with '-m \"not core\"')",
]